<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/poster"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:background="@drawable/movie_background"
    android:layout_margin="6.5dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_marginTop="2dp"
        android:id="@+id/poster_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/poster"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintEnd_toEndOf="@id/poster"
        app:layout_constraintBottom_toTopOf="@id/poster_bottom_barrier"
        tools:src="@drawable/movie1"
        tools:foreground="@drawable/mask"
        />

    <TextView
        android:id="@+id/filmAge"
        android:layout_width="24dp"
        android:layout_height="24dp"
        tools:text="@string/_13"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12sp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like"
        android:layout_gravity="end"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textColor="#FF3466"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@id/poster_bottom_barrier"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="22dp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:numStars="5"
        android:progressBackgroundTint="@color/grey_star"
        android:progressTint="@color/pink_star"
        android:rating="4"
        android:scaleX=".6"
        android:scaleY=".6"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        android:stepSize="1"
        style="?android:attr/ratingBarStyleSmall"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag" />

    <TextView
        android:id="@+id/review_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:textStyle="bold"
        android:textSize="8sp"
        android:textColor="#6D6D80"
        app:layout_constraintTop_toBottomOf="@id/tag"
        app:layout_constraintStart_toEndOf="@id/ratingBar"
        android:layout_marginTop="4dp"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/poster_bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="poster_image"
        app:barrierDirection="bottom"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Avengers: End Game"
        android:textStyle="bold"
        android:minLines="1"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:textColor="#ECECEC"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/poster_bottom_barrier"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="137 min"
        android:textStyle="bold"
        android:textSize="8sp"
        android:textColor="#6D6D80"
        app:layout_constraintTop_toBottomOf="@id/textName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>